feat: set default Phone and Email to Profile's Phone and Email for Job Application. Delete Swagger Files from Repository. Add /docs repository to .gitignore
